// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupMenu renders correctly when closed 1`] = `
<DocumentFragment>
  <div
    class="relative inline-block"
  >
    <div
      class="cursor-pointer"
    >
      <button>
        Toggle
      </button>
    </div>
    <div
      class="fixed z-[1000] transition-opacity duration-[250ms] opacity-0 invisible "
      style="top: 0px; left: 0px; height: 0px; width: 0px; transform: translate(-100%, 10px);"
    >
      <div>
        Menu Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PopupMenu renders correctly when open 1`] = `
<DocumentFragment>
  <div
    class="relative inline-block"
  >
    <div
      class="cursor-pointer"
    >
      <button>
        Toggle
      </button>
    </div>
    <div
      class="fixed z-[1000] transition-opacity duration-[250ms] opacity-100 visible "
      style="top: 0px; left: 0px; height: 0px; width: 0px; transform: translate(-100%, 10px);"
    >
      <div>
        Menu Content
      </div>
    </div>
  </div>
</DocumentFragment>
`;
